--- a/BT-GK1/Halloween Card/link/album.html
+++ b/BT-GK1/Halloween Card/link/album.html
@@ -21,28 +21,28 @@
         <div class="card-1">
             <div class="col-12">
                 <div class="row mt-4">
-                    <div class="col-4"><img src="/img/album/B1.jpg" alt=""></div>
-                    <div class="col-4"><img src="/img/album/B2.jpg" alt=""></div>
-                    <div class="col-4"><img src="/img/album/B3.jpg" alt=""></div>
+                    <div class="col-4"><img src="img/B11.webp" alt=""></div>
+                    <div class="col-4"><img src="img/B2.jpg" alt=""></div>
+                    <div class="col-4"><img src="img/B3.jpg" alt=""></div>
                 </div>
             </div>
         </div>
         <div class="card-2">
             <div class="col-12">
                 <div class="row mt-3">
-                    <div class="col-3"><img src="/img/album/B4.jpg" alt=""></div>
-                    <div class="col-3"><img src="/img/album/B5.jpg" alt=""></div>
-                    <div class="col-3"><img src="/img/album/B6.jpg" alt=""></div>
-                    <div class="col-3"><img src="/img/album/B7.jpg" alt=""></div>
+                    <div class="col-3"><img src="img/B4.jpg" alt=""></div>
+                    <div class="col-3"><img src="img/B5.jpg" alt=""></div>
+                    <div class="col-3"><img src="img/B6.jpg" alt=""></div>
+                    <div class="col-3"><img src="img/B7.jpg" alt=""></div>
                 </div>
             </div>
         </div>
         <div class="card-3">
             <div class="col-12">
                 <div class="row mt-3">
-                    <div class="col-4"><img src="/img/album/B8.jpg" alt=""></div>
-                    <div class="col-4"><img src="/img/album/B9.jpg" alt=""></div>
-                    <div class="col-4"><img src="/img/album/B10.jpg" alt=""></div>
+                    <div class="col-4"><img src="img/B8.jpg" alt=""></div>
+                    <div class="col-4"><img src="img/B9.jpg" alt=""></div>
+                    <div class="col-4"><img src="img/B10.jpg" alt=""></div>
                 </div>
             </div>
         </div>
