--- a/BT-GK1/Halloween Card/link/booth.html
+++ b/BT-GK1/Halloween Card/link/booth.html
@@ -20,7 +20,7 @@
                 <div class="row mt-4">
                     <div class="col-3">
                         <div class="card" style="width: 18rem;">
-                            <img src="/img/booth/B1.webp" class="card-img-top" alt="">
+                            <img src="img/B11.webp" class="card-img-top" alt="">
                             <div class="card-body">
                                 <h5 class="card-title">Bánh kem ma quái</h5>
                                 <p class="card-text">Price: 299$</p>
@@ -30,7 +30,7 @@
                     </div>
                     <div class="col-3">
                         <div class="card" style="width: 18rem;">
-                            <img src="/img/booth/B2" class="card-img-top" alt="">
+                            <img src="img/B12" class="card-img-top" alt="">
                             <div class="card-body">
                                 <h5 class="card-title">Bánh mặt người</h5>
                                 <p class="card-text">Price: 199$</p>
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col-3">
                         <div class="card" style="width: 18rem;">
-                            <img src="/img/booth/B3.jpg" class="card-img-top" alt="">
+                            <img src="img/B13.jpg" class="card-img-top" alt="">
                             <div class="card-body">
                                 <h5 class="card-title">Bánh ma</h5>
                                 <p class="card-text">Price: 99$</p>
@@ -50,7 +50,7 @@
                     </div>
                     <div class="col-3">
                         <div class="card" style="width: 18rem;">
-                            <img src="/img/booth/B4.png" class="card-img-top" alt="">
+                            <img src="img/B14.png" class="card-img-top" alt="">
                             <div class="card-body">
                                 <h5 class="card-title">Bánh quy bất lão</h5>
                                 <p class="card-text">Price: 499$</p>
@@ -66,7 +66,7 @@
                 <div class="row mt-4">
                     <div class="col-3">
                         <div class="card" style="width: 18rem;">
-                            <img src="/img/booth/B5" class="card-img-top" alt="">
+                            <img src="img/B15" class="card-img-top" alt="">
                             <div class="card-body">
                                 <h5 class="card-title">Bánh kem ma quái</h5>
                                 <p class="card-text">Price: 299$</p>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="col-3">
                         <div class="card" style="width: 18rem;">
-                            <img src="/img/booth/B6.jpg" class="card-img-top" alt="">
+                            <img src="img/B16.jpg" class="card-img-top" alt="">
                             <div class="card-body">
                                 <h5 class="card-title">Bánh mặt người</h5>
                                 <p class="card-text">Price: 199$</p>
@@ -86,7 +86,7 @@
                     </div>
                     <div class="col-3">
                         <div class="card" style="width: 18rem;">
-                            <img src="/img/booth/B7.jpg" class="card-img-top" alt="">
+                            <img src="img/B17.jpg" class="card-img-top" alt="">
                             <div class="card-body">
                                 <h5 class="card-title">Bánh ma</h5>
                                 <p class="card-text">Price: 99$</p>
@@ -96,7 +96,7 @@
                     </div>
                     <div class="col-3">
                         <div class="card" style="width: 18rem;">
-                            <img src="/img/booth/B8.jpg" class="card-img-top" alt="">
+                            <img src="img/B18.jpg" class="card-img-top" alt="">
                             <div class="card-body">
                                 <h5 class="card-title">Bánh quy bất lão</h5>
                                 <p class="card-text">Price: 499$</p>
