--- a/BT-GK1/Halloween Card/link/form.html
+++ b/BT-GK1/Halloween Card/link/form.html
@@ -41,8 +41,8 @@
                     <div class="row mt-5">
                         <div class="col-8">
                             <textarea class="text" rows="5" cols="100" placeholder="Chú thích về bản thân...."></textarea>
-                            <img class="pum" src="/img/Pumpkin.png" alt="">
-                            <img class="home" src="/img/Home.png" alt="">
+                            <img class="pum" src="img" alt="">
+                            <img class="home" src="img/Home.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                         <li>Bảo quản tài sản cá nhân</li>
                         <li>Không gây rối làm ảnh hưởng</li>
                         <li>Tích cực hoạt động</li>
-                        <img class="bat" src="/img/Bat.png">
+                        <img class="bat" src="img/Bat.png">
                     </ul>
                 </div>
             </div>
